css/app.css
/* ... */
.map-data-control .layer-list button,
.background-control .layer-list button {
    float: right;
    height: 100%;
    width: 10%;
    border-left: 1px solid #CCC;
    border-radius: 0;
}

.map-data-control .layer-list button .icon,
.background-control .layer-list button .icon {
    opacity: 0.5;
}

.map-data-control .layer-list button:first-of-type,
.background-control .layer-list button:first-of-type {
    border-radius: 0 3px 3px 0;
}

.map-data-control .map-overlay,
.background-control .map-overlay,
.help-control .map-overlay {
    z-index: -1;
}


/* Geolocator */

.geolocate-control {
    margin-bottom: 10px;
}

.geolocate-control button {
    border-radius: 0 0 0 4px;
}

.map-overlay.content {
    position: fixed;
    top:60px;
    bottom: 30px;
    padding: 20px 50px 20px 20px;
    right: 0;
    overflow: auto;
}

/* Help */

.help-control button {
    border-radius: 0 0 0 4px;
}

.help-wrap p {
    font-size: 15px;
    margin-bottom: 20px;
}

.help-wrap .left-content .body p code {
    padding:2px 4px;
    background:#eee;
}

.help-wrap .toc {
    /* This is two columns, 41.66666 x .4 = 16.6666 */
    width:40%;
    float:right;
    margin-left: 20px;
    margin-bottom: 20px;
    padding-left: 5px
}

.help-wrap .toc li a,
.help-wrap .nav a {
    display: block;
    border: 1px solid #CCC;
    padding: 5px 10px;
}

.help-wrap .toc li a {
    border-bottom: 0;
}

.help-wrap .toc li a:hover,
.help-wrap .nav a:hover  {
    background: #ececec;
}

.help-wrap .toc li a.selected {
    background: #E8EBFF;
}

.help-wrap .toc li:first-child a {
    border-radius: 4px 4px 0 0;
}

.help-wrap .toc li:nth-last-child(2) a {
    border-bottom: 1px solid #CCC;
    border-radius: 0 0 4px 4px
}

.help-wrap .toc li.walkthrough a {
    overflow: hidden;
    margin-top: 10px;
    border-bottom: 1px solid #ccc;
    border-radius: 4px;
}

.help-wrap .nav {
    position: relative;
}

.help-wrap .nav a {
    float: left;
    width: 50%;
    text-align: center;
}

.help-wrap .nav a:first-child {
    border-radius: 4px 0 0 4px;
}

.help-wrap .nav a:last-child:not(:only-child) {
    border-radius: 0 4px 4px 0;
    border-left: 0;
}

.help-wrap .nav a:only-child {
    width: 100%;
    border-radius: 4px;
}

/* Map
------------------------------------------------------- */

#map {
    position:relative;
    overflow:hidden;
    height:100%;
    background:#000;
}

#supersurface {
    transform-origin:0 0;
    -ms-transform-origin:0 0;
    -webkit-transform-origin:0 0;
    -moz-transform-origin:0 0;
    -o-transform-origin:0 0;
    -moz-user-select: none;
    -webkit-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

#supersurface, .layer-layer {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
}

/* Map-In-Map
------------------------------------------------------- */

.map-in-map {
    position: absolute;
    overflow: hidden;
    top: 60px;
    width: 200px;
    height: 150px;
    z-index: 5;
    background: #000;
    border: #aaa 1px solid;
    box-shadow: 0 0 2em black;
}

.map-in-map-tiles {
    transform-origin:0 0;
    -ms-transform-origin:0 0;
    -webkit-transform-origin:0 0;
    -moz-transform-origin:0 0;
    -o-transform-origin:0 0;
    -moz-user-select: none;
    -webkit-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.map-in-map-svg,
.map-in-map-gpx {
    top: 0;
    left: 0;
    overflow: hidden;
    height: 100%;
    width: 100%;
}

.map-in-map-svg {
    position: absolute;
}

.map-in-map-gpx {
    position: relative;
}

.map-in-map-bbox {
    fill: none;
    stroke: rgba(255, 255, 0, 0.75);
    stroke-width: 1;
    shape-rendering: crispEdges;
}

.map-in-map-bbox.thick {
    stroke-width: 5;
}

/* Info Box
------------------------------------------------------- */
.infobox {
    position: absolute;
    z-index: 1;
    right: 0;
    bottom: 30px;
    width: 240px;
    border-radius: 4px 0 0 0;
    border-bottom: 1px solid black;
}

.infobox .selection-heading {
    display: block;
    border-radius: 4px 0 0 0;
    padding: 5px 10px;
    height: 30px;
}

.infobox ul {
    padding: 5px 10px;
}

.infobox .button {
    position: absolute;
    background: #7092ff;
    border-radius: 2px;
    padding: 0 4px;
    color: white;
    top: 40px;
    right: 10px;
}

/* About Section
------------------------------------------------------- */

#about {
    width: 100%;
    position: absolute;
    right:0;
    bottom:0;
    border-radius: 0;
}

#attrib {
    width: 100%;
    height: 20px;
    margin-bottom: 5px;
    float: left;
    clear: both;
    pointer-events: none;
}

#attrib * { pointer-events: all; }

.base-layer-attribution,
.overlay-layer-attribution {
    position: absolute;
    color: #888;
    font-size: 10px;
}

.base-layer-attribution {
    left: 10px;
}

.overlay-layer-attribution {
    right: 10px;
}

.overlay-layer-attribution .attribution:not(:last-child):after {
    content: '; ';
}

.source-image {
    height:20px;
    vertical-align:top;
}

#footer {
    width: 100%;
    float: left;
    clear: both;
}

#scale-block {
    display: table-cell;
    vertical-align: bottom;
    width: 250px;
    height: 30px;
    float: left;
    clear: left;
}

#info-block {
    float: right;
    clear: right;
}

#scale {
    height: 30px;
    width: 100%;
}

#scale text {
    font: 12px sans-serif;
    stroke: none;
    fill: #ccc;
    text-anchor: start;
}

#scale path {
    fill: none;
    stroke: #ccc;
    stroke-width: 1;
    shape-rendering: crispEdges;
}

#about-list {
    text-align: right;
    margin-right: 10px;
    clear: right;
}

#about-list li {
    float: right;
    border-left: 1px solid rgba(255,255,255,.5);
    padding: 5px 0 5px 5px;
    margin-left: 5px;
}

#about-list li:last-child {
    border-left: 0;
    margin-left: 0;
    padding-left: 0;
}

.source-switch a {
    padding: 2px 4px 4px 4px;
    border-radius: 2px;
}
.source-switch a.live {
    background: #d32232;
    color:#fff;
}
/* ... */

